# MCP

./: .clang-format  .clangd  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile.cd  Jenkinsfile.win  MCP协议版本Bug分析报告.md  Makefile  README.md  SMOKE_REPORT.md  VERSION  compile_flags.txt  mcp-config.example.json  sonar-project.properties  通用敌怪-v2.drawio
.github/workflows/: bump-version.yml  ci.yml  deploy.yml  update-bench-baseline.yml
ansible/: README.md  ansible.cfg  deploy.yml  inventory.ini
ansible/inventories/: docker.yml
ansible/playbooks/: configure_jenkins_tools.yml  deploy_release.yml
docker/ansible/: Dockerfile  README.md  docker-compose.yml
docker/jenkins/: Dockerfile  README.md  docker-compose.yml  entrypoint-docker-sock.sh
docs/: ACCEPTANCE_DOD.md  ANALYSIS_JSON_VS_SQLITE.md  ANALYSIS_VCPKG_VS_ZERO_DEP.md  ANALYSIS_WEB_VS_SINGLE_EXE.md  APPLICATION_LOGIC.md  ARCHITECTURE.md  CHANGELOG.md  CLI_MCP_REFERENCE.md  DEV_LOG.md  DEV_PROCESS.md  FEATURES.md  MCP_AGENT_PERF_UX_ANALYSIS.md  MCP_PERF_OPT_PLAN.md  MINDMAP.md  NO_SKILL_HOST_CHECKLIST.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY_20260710.md  PROJECT_TIMELINE.md  QUICK_START.md  RUNBOOK.md  USER_GUIDE.md  WORKLOG.md
docs/api_reference/: openapi.yaml
docs/diagrams/: README.md
docs/images/: game-design-flow.drawio  game-pipeline-final.drawio  game-pipeline-flow-v2.drawio  game-pipeline-flow.drawio  git-workflow.drawio
docs/reviews/: 2026-07-17-ci-artifact-docs-test-report-272.md  README.md  TEMPLATE.md
docs/templates/: DEPLOY_RELEASE_REPORT.md  PERF_REPORT.md  QUALITY_GATE_REPORT.md
examples/: Kfc-Crazy-Thu-vivo50.mmd  README.md  architecture.xml  flowchart.mmd  mindmap.md  orgchart.csv  whiteboard.excalidraw
examples/example_input/: architecture.xml  class.mmd  enemy-system.mmd  enemy_sample.xml  enemy_sample_bad.csv  enemy_spec.md  er.mmd  flowchart.mmd  flowchart_colors.mmd  flowchart_colors_bad.mmd  flowchart_syntax_bad.mmd  mermaid_unknown_bad.mmd  name_slug_demo.csv  orgchart.csv  outline.md  pie.mmd  sequence.mmd  sequence_bad.mmd  skill_relations.csv  state.mmd  whiteboard_freedraw.excalidraw  workflow.drawio
samples/: README.md
samples/01-v50-battle-plan/: source.mmd  v50-battle-plan.drawio  v50-battle-plan.excalidraw  v50-battle-plan.mmd  v50-battle-plan.model.json  v50-battle-plan.url.txt
samples/02-hajimi-cat/: hajimi-cat.drawio  hajimi-cat.excalidraw  hajimi-cat.mmd  hajimi-cat.model.json  hajimi-cat.url.txt  source.mmd
samples/03-one-piece/: one-piece.drawio  one-piece.excalidraw  one-piece.mmd  one-piece.url.txt  (+2 more)
scripts/: bench_ci_retry.sh  bench_compare.py  check_docs_links.py  ci_capture.sh  export-example-testout.sh  export-table-collab-examples.sh  export-table-examples.sh  generate_deploy_release_report.py  generate_docs_test_report.py  generate_perf_report.py  generate_quality_gate_report.py  mcp_perf_smoke.py  update-fixtures.sh
src/: csv_util.hpp  cursor.hpp  cursor_types.hpp  exporters.hpp  json.hpp  layout.hpp  main.cpp  mcp.hpp  mcp_table_tools.hpp  model.hpp  parsers.hpp  storage.hpp  table_bridge.hpp  table_model.hpp  table_storage.hpp  table_xml.hpp  version_manager.hpp  version_types.hpp
tests/: bench_baseline.json  bench_main.cpp  check_types.cpp  mcp_smoke.sh  smoke_test.sh  table_smoke.sh  test_cursor.cpp  test_main.cpp  test_version.cpp
(+166 files in other folders)
